--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="dash-circ"></div>
         <div id="bm"></div>
     </div>
+    <h3>Jacob Rankin</h3>
 </div>
     <script src="lottie.js"></script>
     <script src="animations.js"></script>
